force-app/main/default/objects/DM_Automated_Payment_Setup__c/DM_Automated_Payment_Setup__c.object-meta.xml
<CustomObject>
    <label>DM Automated Payment Setup</label>
    <nameField>
        <label>DM Automated Payment Setup Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DM Automated Payment Setup</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>