force-app/main/default/objects/DM_Automated_Payment_Setup__c/fields/DM_Amount_Type__c.field-meta.xml
<CustomField>
    <fullName>DM_Amount_Type__c</fullName>
    <label>DM Amount Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>DM_Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>DM_FIXED AMOUNT</fullName>
            </value>
            <value>
                <fullName>DM_LAST BILLED AMOUNT</fullName>
            </value>
            <value>
                <fullName>DM_CURRENT PAYMENT AMOUNT</fullName>
            </value>
            <value>
                <fullName>DM_OLDEST UNPAID BILL AMOUNT</fullName>
            </value>
            <value>
                <fullName>DM_TOTAL OUTSTANDING BILL AMOUNT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>