force-app/main/default/objects/DM_Automated_Payment_Setup__c/fields/DM_Bank_Account__c.field-meta.xml
<CustomField>
    <fullName>DM_Bank_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>DM Bank Account</label>
    <referenceTo>loan__Bank_Account__c</referenceTo>
    <relationshipLabel>DM Automated Payment Setup</relationshipLabel>
    <relationshipName>DM_Automated_Payment_Setup</relationshipName>
    <type>Lookup</type>
</CustomField>