force-app/main/default/objects/DM_Automated_Payment_Setup__c/fields/DM_CL_Contract__c.field-meta.xml
<CustomField>
    <fullName>DM_CL_Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>DM CL Contract</label>
    <referenceTo>DM_Loan_Account__c</referenceTo>
    <relationshipLabel>DM Automated Payment Setup</relationshipLabel>
    <relationshipName>DM_Automated_Payment_Setups</relationshipName>
    <type>Lookup</type>
</CustomField>