force-app/main/default/objects/DM_Automated_Payment_Setup__c/fields/DM_Debit_Date__c.field-meta.xml
<CustomField>
    <fullName>DM_Debit_Date__c</fullName>
    <label>DM Debit Date</label>
    <type>Date</type>
</CustomField>