force-app/main/default/objects/DM_Automated_Payment_Setup__c/fields/DM_Debit_Day__c.field-meta.xml
<CustomField>
    <fullName>DM_Debit_Day__c</fullName>
    <label>DM Debit Day</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>