force-app/main/default/objects/DM_Automated_Payment_Setup__c/fields/DM_Payment_Mode__c.field-meta.xml
<CustomField>
    <fullName>DM_Payment_Mode__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>DM Payment Mode</label>
    <referenceTo>loan__Payment_Mode__c</referenceTo>
    <relationshipLabel>DM Automated Payment Setup (DM Payment Mode)</relationshipLabel>
    <relationshipName>DM_Automated_Payment_Setup1</relationshipName>
    <type>Lookup</type>
</CustomField>