force-app/main/default/objects/DM_Automated_Payment_Setup__c/fields/DM_Recurring_ACH_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>DM_Recurring_ACH_Start_Date__c</fullName>
    <label>DM Recurring ACH Start Date</label>
    <type>Date</type>
</CustomField>