force-app/main/default/objects/DM_Automated_Payment_Setup__c/fields/DM_Second_Payment_Date__c.field-meta.xml
<CustomField>
    <fullName>DM_Second_Payment_Date__c</fullName>
    <label>DM Second Payment Date</label>
    <type>Date</type>
</CustomField>