force-app/main/default/objects/DM_Automated_Payment_Setup__c/fields/Payment_Mode__c.field-meta.xml
<CustomField>
    <fullName>Payment_Mode__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payment Mode</label>
    <referenceTo>loan__Payment_Mode__c</referenceTo>
    <relationshipLabel>DM Automated Payment Setup</relationshipLabel>
    <relationshipName>DM_Automated_Payment_Setup</relationshipName>
    <type>Lookup</type>
</CustomField>